--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,11 +1,3 @@
-/**
-* Template Name: Arsha
-* Updated: Jul 27 2023 with Bootstrap v5.3.1
-* Template URL: https://bootstrapmade.com/arsha-free-bootstrap-html-template-corporate/
-* Author: BootstrapMade.com
-* License: https://bootstrapmade.com/license/
-*/
-
 /*--------------------------------------------------------------
 # General
 --------------------------------------------------------------*/
@@ -44,7 +36,7 @@ h6 {
   bottom: 0;
   z-index: 9999;
   overflow: hidden;
-  background: #3F86C3;
+  background: #1d87c8;
 }
 
 #preloader:before {
@@ -52,7 +44,7 @@ h6 {
   position: fixed;
   top: calc(50% - 30px);
   left: calc(50% - 30px);
-  border: 6px solid #3F86C3;
+  border: 6px solid #1d87c8;
   border-top-color: #fff;
   border-bottom-color: #fff;
   border-radius: 50%;
@@ -81,7 +73,7 @@ h6 {
   right: 15px;
   bottom: 15px;
   z-index: 996;
-  background: #47b2e4;
+  background: #1d87c8;
   width: 40px;
   height: 40px;
   border-radius: 50px;
@@ -115,7 +107,7 @@ h6 {
 
 #header.header-scrolled,
 #header.header-inner-pages {
-  background: rgba(63, 134, 195, 0.9);
+  background: #1d87c8;
 }
 
 #header .logo {
@@ -182,7 +174,7 @@ h6 {
 .navbar .active,
 .navbar .active:focus,
 .navbar li:hover>a {
-  color: #47b2e4;
+  color: #fff;
 }
 
 .navbar .getstarted,
@@ -331,7 +323,7 @@ h6 {
 .navbar-mobile a:focus {
   padding: 10px 20px;
   font-size: 15px;
-  color: #3F86C3;
+  color: #1d87c8;
 }
 
 .navbar-mobile a:hover,
@@ -343,7 +335,7 @@ h6 {
 .navbar-mobile .getstarted,
 .navbar-mobile .getstarted:focus {
   margin: 15px;
-  color: #3F86C3;
+  color: #1d87c8;
 }
 
 .navbar-mobile .dropdown ul {
@@ -387,7 +379,9 @@ h6 {
 #hero {
   width: 100%;
   height: 80vh;
-  background: #3F86C3;
+  background-image: url("../img/hero.jpg");
+  background-size: cover;
+  /* background: #1d87c8; */
 }
 
 #hero .container {
@@ -400,6 +394,10 @@ h6 {
   font-weight: 700;
   line-height: 56px;
   color: #fff;
+  background-color: #1d87c8;
+  padding: 5px;padding-left:0px;box-shadow: -16px 0 0 #1d87c8;
+  display:inline;
+  white-space:pre-wrap;
 }
 
 #hero h2 {
@@ -522,21 +520,21 @@ section {
 }
 
 .section-title {
-  text-align: center;
+  text-align: left;
   padding-bottom: 30px;
 }
 
 .section-title h2 {
-  font-size: 32px;
+  font-size: 42px;
   font-weight: bold;
-  text-transform: uppercase;
+  /* text-transform: uppercase; */
   margin-bottom: 20px;
   padding-bottom: 20px;
   position: relative;
-  color: #3F86C3;
+  color: #1d87c8;
 }
 
-.section-title h2::before {
+/* .section-title h2::before {
   content: "";
   position: absolute;
   display: block;
@@ -556,7 +554,7 @@ section {
   background: #47b2e4;
   bottom: 0;
   left: calc(50% - 20px);
-}
+} */
 
 .section-title p {
   margin-bottom: 0;
@@ -568,7 +566,7 @@ section {
 .clients {
   padding: 12px 0;
   text-align: center;
-  background: #3F86C3;
+  background: #1d87c8;
 }
 
 .clients img {
@@ -586,6 +584,34 @@ section {
 
 @media (max-width: 768px) {
   .clients img {
+    max-width: 40%;
+  }
+}
+
+/*--------------------------------------------------------------
+# Partners
+--------------------------------------------------------------*/
+.partners {
+  padding: 12px 0;
+  text-align: center;
+  background: #fff;
+}
+
+.partners img {
+  max-width: 95%;
+  transition: all 0.4s ease-in-out;
+  display: inline-block;
+  padding: 15px 0;
+  /* filter: grayscale(100); */
+}
+
+.partners img:hover {
+  filter: none;
+  transform: scale(1.1);
+}
+
+@media (max-width: 768px) {
+  .partners img {
     max-width: 40%;
   }
 }
@@ -656,8 +682,8 @@ section {
 
 .why-us .content h3 {
   font-weight: 400;
-  font-size: 34px;
-  color: #3F86C3;
+  font-size: 42px;
+  color: #1d87c8;
 }
 
 .why-us .content h4 {
@@ -686,6 +712,11 @@ section {
   list-style: none;
 }
 
+.why-us .accordion-list ul hr {
+  color: #1d87c8;
+  opacity: 1;
+}
+
 .why-us .accordion-list li+li {
   margin-top: 15px;
 }
@@ -696,20 +727,22 @@ section {
   border-radius: 4px;
 }
 
+
 .why-us .accordion-list a {
   display: block;
   position: relative;
   font-family: "Montserrat", sans-serif;
-  font-size: 16px;
+  font-size: 24px;
   line-height: 24px;
   font-weight: 500;
   padding-right: 30px;
   outline: none;
   cursor: pointer;
+  color: #1d87c8;
 }
 
 .why-us .accordion-list span {
-  color: #47b2e4;
+  color: #1d87c8;
   font-weight: 600;
   font-size: 18px;
   padding-right: 10px;
@@ -732,11 +765,11 @@ section {
 }
 
 .why-us .accordion-list a.collapsed {
-  color: #3F86C3;
+  color: #1d87c8;
 }
 
 .why-us .accordion-list a.collapsed:hover {
-  color: #47b2e4;
+  color: #1d87c8;
 }
 
 .why-us .accordion-list a.collapsed .icon-show {
@@ -782,7 +815,7 @@ section {
 .skills .content h3 {
   font-weight: 700;
   font-size: 32px;
-  color: #3F86C3;
+  color: #1d87c8;
   font-family: "Montserrat", sans-serif;
 }
 
@@ -819,7 +852,7 @@ section {
   display: block;
   font-weight: 600;
   font-family: "Montserrat", sans-serif;
-  color: #3F86C3;
+  color: #1d87c8;
 }
 
 .skills .progress .skill .val {
@@ -866,7 +899,7 @@ section {
 }
 
 .services .icon-box h4 a {
-  color: #3F86C3;
+  color: #1d87c8;
   transition: ease-in-out 0.3s;
 }
 
@@ -937,14 +970,14 @@ section {
 }
 
 /*--------------------------------------------------------------
-# Portfolio
+# Products
 --------------------------------------------------------------*/
-.portfolio #portfolio-flters {
+.products #owl-filter-bar {
   list-style: none;
   margin-bottom: 20px;
 }
 
-.portfolio #portfolio-flters li {
+.products #owl-filter-bar li {
   cursor: pointer;
   display: inline-block;
   margin: 10px 5px;
@@ -958,25 +991,26 @@ section {
   font-family: "Montserrat", sans-serif;
 }
 
-.portfolio #portfolio-flters li:hover,
-.portfolio #portfolio-flters li.filter-active {
+.portfolio #owl-filter-bar li:hover,
+.portfolio #owl-filter-bar li.filter-active {
   background: #47b2e4;
   color: #fff;
 }
 
-.portfolio .portfolio-item {
+.products .portfolio-item {
   margin-bottom: 30px;
 }
 
-.portfolio .portfolio-item .portfolio-img {
+.products .portfolio-item .portfolio-img {
   overflow: hidden;
 }
 
-.portfolio .portfolio-item .portfolio-img img {
+.products .portfolio-item .portfolio-img img {
   transition: all 0.6s;
+  height: 200px;
 }
 
-.portfolio .portfolio-item .portfolio-info {
+.products .portfolio-item .portfolio-info {
   opacity: 0;
   position: absolute;
   left: 15px;
@@ -988,7 +1022,7 @@ section {
   padding: 10px 15px;
 }
 
-.portfolio .portfolio-item .portfolio-info h4 {
+.products .portfolio-item .portfolio-info h4 {
   font-size: 18px;
   color: #fff;
   font-weight: 600;
@@ -996,13 +1030,13 @@ section {
   margin-bottom: 0px;
 }
 
-.portfolio .portfolio-item .portfolio-info p {
+.products .portfolio-item .portfolio-info p {
   color: #f9fcfe;
   font-size: 14px;
   margin-bottom: 0;
 }
 
-.portfolio .portfolio-item .portfolio-info .preview-link,
+.products .portfolio-item .portfolio-info .preview-link,
 .portfolio .portfolio-item .portfolio-info .details-link {
   position: absolute;
   right: 40px;
@@ -1012,20 +1046,20 @@ section {
   transition: 0.3s;
 }
 
-.portfolio .portfolio-item .portfolio-info .preview-link:hover,
+.products .portfolio-item .portfolio-info .preview-link:hover,
 .portfolio .portfolio-item .portfolio-info .details-link:hover {
   color: #47b2e4;
 }
 
-.portfolio .portfolio-item .portfolio-info .details-link {
+.products .portfolio-item .portfolio-info .details-link {
   right: 10px;
 }
 
-.portfolio .portfolio-item:hover .portfolio-img img {
+.products .portfolio-item:hover .portfolio-img img {
   transform: scale(1.15);
 }
 
-.portfolio .portfolio-item:hover .portfolio-info {
+.products .portfolio-item:hover .portfolio-info {
   opacity: 1;
 }
 
@@ -1129,7 +1163,7 @@ section {
   font-weight: 700;
   margin-bottom: 5px;
   font-size: 20px;
-  color: #3F86C3;
+  color: #1d87c8;
 }
 
 .team .member span {
@@ -1175,7 +1209,7 @@ section {
 }
 
 .team .member .social a i {
-  color: #3F86C3;
+  color: #1d87c8;
   font-size: 16px;
   margin: 0 2px;
 }
@@ -1212,12 +1246,12 @@ section {
   font-weight: 500;
   margin-bottom: 15px;
   font-size: 20px;
-  color: #3F86C3;
+  color: #1d87c8;
 }
 
 .pricing h4 {
   font-size: 48px;
-  color: #3F86C3;
+  color: #1d87c8;
   font-weight: 400;
   font-family: "Montserrat", sans-serif;
   margin-bottom: 25px;
@@ -1379,7 +1413,7 @@ section {
 }
 
 .faq .faq-list a.collapsed {
-  color: #3F86C3;
+  color: #1d87c8;
   transition: 0.3s;
 }
 
@@ -1432,7 +1466,7 @@ section {
   font-size: 22px;
   font-weight: 600;
   margin-bottom: 5px;
-  color: #3F86C3;
+  color: #1d87c8;
 }
 
 .contact .info p {
@@ -1610,7 +1644,7 @@ section {
 .breadcrumbs h2 {
   font-size: 28px;
   font-weight: 600;
-  color: #3F86C3;
+  color: #1d87c8;
 }
 
 .breadcrumbs ol {
@@ -1638,7 +1672,7 @@ section {
 --------------------------------------------------------------*/
 #footer {
   font-size: 14px;
-  background: #3F86C3;
+  background: #1d87c8;
 }
 
 #footer .footer-newsletter {
@@ -1655,7 +1689,7 @@ section {
   padding: 0;
   line-height: 1;
   font-weight: 600;
-  color: #3F86C3;
+  color: #1d87c8;
 }
 
 #footer .footer-newsletter form {
@@ -1696,7 +1730,7 @@ section {
 
 #footer .footer-top {
   padding: 60px 0 30px 0;
-  background: #3F86C3;
+  background: #1d87c8;
 }
 
 #footer .footer-top .footer-contact {
@@ -1704,7 +1738,27 @@ section {
 }
 
 #footer .footer-top .footer-contact h3 {
-  font-size: 28px;
+  font-size: 56px;
+  margin: 0 0 10px 0;
+  padding: 2px 0 2px 0;
+  line-height: 1;
+  /* text-transform: uppercase; */
+  font-weight: 600;
+  color: #fff;
+}
+
+#footer .footer-top .footer-contact h4 {
+  font-size: 20px;
+  margin: 0 0 10px 0;
+  padding: 2px 0 2px 0;
+  line-height: 1;
+  text-transform: uppercase;
+  font-weight: 600;
+  color: #fff;
+}
+
+#footer .footer-top .footer-contact h5 {
+  font-size: 18px;
   margin: 0 0 10px 0;
   padding: 2px 0 2px 0;
   line-height: 1;
@@ -1823,4 +1877,12 @@ section {
   #footer .credits {
     padding-top: 4px;
   }
+}
+
+.item img {
+  width: 100%;
+  height: 300px;
+  object-fit: contain;
+  background-color: rgb(230, 231, 232);
+  border-radius: 20%;
 }
