--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -390,7 +390,7 @@ h6 {
 
 #hero h1 {
   margin: 0 0 10px 0;
-  font-size: 48px;
+  font-size: 38px;
   font-weight: 700;
   line-height: 56px;
   color: #fff;
@@ -452,8 +452,8 @@ h6 {
 
 @media (max-width: 991px) {
   #hero {
-    height: 100vh;
-    text-align: center;
+    height: 60vh;
+    /* text-align: center; */
   }
 
   #hero .animated {
@@ -470,9 +470,14 @@ h6 {
 }
 
 @media (max-width: 768px) {
+  #hero {
+    height: 50vh;
+    /* text-align: center; */
+  }
+  
   #hero h1 {
-    font-size: 28px;
-    line-height: 36px;
+    font-size: 18px;
+    line-height: 24px;
   }
 
   #hero h2 {
@@ -525,7 +530,7 @@ section {
 }
 
 .section-title h2 {
-  font-size: 42px;
+  font-size: 38px;
   font-weight: bold;
   /* text-transform: uppercase; */
   margin-bottom: 20px;
@@ -584,7 +589,7 @@ section {
 
 @media (max-width: 768px) {
   .clients img {
-    max-width: 40%;
+    max-width: 90%;
   }
 }
 
@@ -612,7 +617,7 @@ section {
 
 @media (max-width: 768px) {
   .partners img {
-    max-width: 40%;
+    max-width: 90%;
   }
 }
 
@@ -1877,6 +1882,14 @@ section {
   #footer .credits {
     padding-top: 4px;
   }
+
+  #footer .footer-top .footer-contact h3 {
+    font-size: 38px;
+  }
+}
+
+#footer a{
+  color: #fff;
 }
 
 .item img {
