--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -7,7 +7,7 @@ body {
 }
 
 a {
-  color: #47b2e4;
+  color: #1d87c8;
   text-decoration: none;
 }
 
@@ -184,7 +184,7 @@ h6 {
   border-radius: 50px;
   color: #fff;
   font-size: 14px;
-  border: 2px solid #47b2e4;
+  border: 2px solid #1d87c8;
   font-weight: 600;
 }
 
@@ -229,7 +229,7 @@ h6 {
 .navbar .dropdown ul a:hover,
 .navbar .dropdown ul .active:hover,
 .navbar .dropdown ul li:hover>a {
-  color: #47b2e4;
+  color: #1d87c8;
 }
 
 .navbar .dropdown:hover>ul {
@@ -329,7 +329,7 @@ h6 {
 .navbar-mobile a:hover,
 .navbar-mobile .active,
 .navbar-mobile li:hover>a {
-  color: #47b2e4;
+  color: #1d87c8;
 }
 
 .navbar-mobile .getstarted,
@@ -365,7 +365,7 @@ h6 {
 .navbar-mobile .dropdown ul a:hover,
 .navbar-mobile .dropdown ul .active:hover,
 .navbar-mobile .dropdown ul li:hover>a {
-  color: #47b2e4;
+  color: #1d87c8;
 }
 
 .navbar-mobile .dropdown>.dropdown-active {
@@ -417,7 +417,7 @@ h6 {
   transition: 0.5s;
   margin: 10px 0 0 0;
   color: #fff;
-  background: #47b2e4;
+  background: #1d87c8;
 }
 
 #hero .btn-get-started:hover {
@@ -443,7 +443,7 @@ h6 {
 }
 
 #hero .btn-watch-video:hover i {
-  color: #47b2e4;
+  color: #1d87c8;
 }
 
 #hero .animated {
@@ -556,7 +556,7 @@ section {
   display: block;
   width: 40px;
   height: 3px;
-  background: #47b2e4;
+  background: #1d87c8;
   bottom: 0;
   left: calc(50% - 20px);
 } */
@@ -648,7 +648,7 @@ section {
   left: 0;
   top: 2px;
   font-size: 20px;
-  color: #47b2e4;
+  color: #1d87c8;
   line-height: 1;
 }
 
@@ -666,14 +666,14 @@ section {
   border-radius: 4px;
   transition: 0.3s;
   line-height: 1;
-  color: #47b2e4;
+  color: #1d87c8;
   animation-delay: 0.8s;
   margin-top: 6px;
-  border: 2px solid #47b2e4;
+  border: 2px solid #1d87c8;
 }
 
 .about .content .btn-learn-more:hover {
-  background: #47b2e4;
+  background: #1d87c8;
   color: #fff;
   text-decoration: none;
 }
@@ -836,7 +836,7 @@ section {
 .skills .content ul i {
   font-size: 20px;
   padding-right: 4px;
-  color: #47b2e4;
+  color: #1d87c8;
 }
 
 .skills .content p:last-child {
@@ -892,7 +892,7 @@ section {
 }
 
 .services .icon-box .icon i {
-  color: #47b2e4;
+  color: #1d87c8;
   font-size: 36px;
   transition: 0.3s;
 }
@@ -919,7 +919,7 @@ section {
 }
 
 .services .icon-box:hover h4 a {
-  color: #47b2e4;
+  color: #1d87c8;
 }
 
 /*--------------------------------------------------------------
@@ -956,8 +956,8 @@ section {
 }
 
 .cta .cta-btn:hover {
-  background: #47b2e4;
-  border: 2px solid #47b2e4;
+  background: #1d87c8;
+  border: 2px solid #1d87c8;
 }
 
 @media (max-width: 1024px) {
@@ -998,7 +998,7 @@ section {
 
 .portfolio #owl-filter-bar li:hover,
 .portfolio #owl-filter-bar li.filter-active {
-  background: #47b2e4;
+  background: #1d87c8;
   color: #fff;
 }
 
@@ -1053,7 +1053,7 @@ section {
 
 .products .portfolio-item .portfolio-info .preview-link:hover,
 .portfolio .portfolio-item .portfolio-info .details-link:hover {
-  color: #47b2e4;
+  color: #1d87c8;
 }
 
 .products .portfolio-item .portfolio-info .details-link {
@@ -1089,11 +1089,11 @@ section {
   height: 12px;
   background-color: #fff;
   opacity: 1;
-  border: 1px solid #47b2e4;
+  border: 1px solid #1d87c8;
 }
 
 .portfolio-details .portfolio-details-slider .swiper-pagination .swiper-pagination-bullet-active {
-  background-color: #47b2e4;
+  background-color: #1d87c8;
 }
 
 .portfolio-details .portfolio-info {
@@ -1220,7 +1220,7 @@ section {
 }
 
 .team .member .social a:hover {
-  background: #47b2e4;
+  background: #1d87c8;
 }
 
 .team .member .social a:hover i {
@@ -1267,7 +1267,7 @@ section {
 }
 
 .pricing h4 span {
-  color: #47b2e4;
+  color: #1d87c8;
   font-size: 18px;
   display: block;
 }
@@ -1309,26 +1309,26 @@ section {
   display: inline-block;
   padding: 12px 35px;
   border-radius: 50px;
-  color: #47b2e4;
+  color: #1d87c8;
   transition: none;
   font-size: 16px;
   font-weight: 500;
   font-family: "Montserrat", sans-serif;
   transition: 0.3s;
-  border: 1px solid #47b2e4;
+  border: 1px solid #1d87c8;
 }
 
 .pricing .buy-btn:hover {
-  background: #47b2e4;
+  background: #1d87c8;
   color: #fff;
 }
 
 .pricing .featured {
-  border-top-color: #47b2e4;
+  border-top-color: #1d87c8;
 }
 
 .pricing .featured .buy-btn {
-  background: #47b2e4;
+  background: #1d87c8;
   color: #fff;
 }
 
@@ -1397,7 +1397,7 @@ section {
   position: absolute;
   right: 0;
   left: 20px;
-  color: #47b2e4;
+  color: #1d87c8;
 }
 
 .faq .faq-list .icon-show,
@@ -1423,7 +1423,7 @@ section {
 }
 
 .faq .faq-list a.collapsed:hover {
-  color: #47b2e4;
+  color: #1d87c8;
 }
 
 .faq .faq-list a.collapsed .icon-show {
@@ -1444,8 +1444,8 @@ section {
 # Contact
 --------------------------------------------------------------*/
 .contact .info {
-  border-top: 3px solid #47b2e4;
-  border-bottom: 3px solid #47b2e4;
+  border-top: 3px solid #1d87c8;
+  border-bottom: 3px solid #1d87c8;
   padding: 30px;
   background: #fff;
   width: 100%;
@@ -1454,7 +1454,7 @@ section {
 
 .contact .info i {
   font-size: 20px;
-  color: #47b2e4;
+  color: #1d87c8;
   float: left;
   width: 44px;
   height: 44px;
@@ -1505,21 +1505,21 @@ section {
 }
 
 .contact .info .social-links a:hover {
-  background: #47b2e4;
+  background: #1d87c8;
   color: #fff;
 }
 
 .contact .info .email:hover i,
 .contact .info .address:hover i,
 .contact .info .phone:hover i {
-  background: #47b2e4;
+  background: #1d87c8;
   color: #fff;
 }
 
 .contact .php-email-form {
   width: 100%;
-  border-top: 3px solid #47b2e4;
-  border-bottom: 3px solid #47b2e4;
+  border-top: 3px solid #1d87c8;
+  border-bottom: 3px solid #1d87c8;
   padding: 30px;
   background: #fff;
   box-shadow: 0 0 24px 0 rgba(0, 0, 0, 0.12);
@@ -1596,7 +1596,7 @@ section {
 
 .contact .php-email-form input:focus,
 .contact .php-email-form textarea:focus {
-  border-color: #47b2e4;
+  border-color: #1d87c8;
 }
 
 .contact .php-email-form input {
@@ -1608,7 +1608,7 @@ section {
 }
 
 .contact .php-email-form button[type=submit] {
-  background: #47b2e4;
+  background: #1d87c8;
   border: 0;
   padding: 12px 34px;
   color: #fff;
@@ -1722,7 +1722,7 @@ section {
   background: none;
   font-size: 16px;
   padding: 0 20px;
-  background: #47b2e4;
+  background: #1d87c8;
   color: #fff;
   transition: 0.3s;
   border-radius: 50px;
@@ -1824,13 +1824,13 @@ section {
 
 #footer .footer-top .footer-links ul a:hover {
   text-decoration: none;
-  color: #47b2e4;
+  color: #1d87c8;
 }
 
 #footer .footer-top .social-links a {
   font-size: 18px;
   display: inline-block;
-  background: #47b2e4;
+  background: #1d87c8;
   color: #fff;
   line-height: 1;
   padding: 8px 0;
